disable random lore sending